--- a/src/main/resources/static/html/ajax-demo.html
+++ b/src/main/resources/static/html/ajax-demo.html
@@ -2,26 +2,27 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ajax</title>
+    <title>AJAX</title>
 </head>
 <body>
 <p>
     <input type="button" value="发送" onclick="send();">
 </p>
 
-<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js" crossorigin="anonymous"></script>
 <script>
     function send() {
         $.post(
-            "/community/ajax",
+            "/community/alpha/ajax",
             {"name": "张三", "age": 23},
             function (data) {
                 console.log(typeof (data));
                 console.log(data);
+
                 data = $.parseJSON(data);
                 console.log(typeof (data));
                 console.log(data.code);
-                console.log(data.message);
+                console.log(data.msg);
             }
         );
     }
